--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@next/font": "^14.0.4",
-    "next": "14.0.4",
+    "next": "^14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-intersection-observer": "^9.5.3",
